Fixed bottom borders and spacing around plates

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,8 @@
 body{
 	margin:0;
 	font-family: 'Open Sans';
-	background-color: #ccc;
+	font-weight: 300;
 	background: url(../images/background.jpg) no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
 	background-size: cover;
 }
 
@@ -24,21 +21,33 @@ body{
 .secondary-background{
   background-color:#ffffff;
 }
+h1{
+	font-weight: 300;
+	font-size: 38px;
+}
+h2{
+	font-weight: 300;
+}
+h3{
+	font-weight: 300;
+}
+h4{
+	font-weight: 300;
+}
 
 /*HEADER*/
 header{
 	height: 100px;
 	line-height: 100px;
-	padding-left: 75px;
-	padding-right: 75px;
-	overflow: auto;
+	width: 85%;
+	margin: auto;
+	overflow: auto;	
 	border-bottom: 1px solid #ffffff;
 	margin-bottom: 50px;
 }
 
 header .logo{
 	float:left;
-	vertical-align: middle;
 }
 
 header .logo img{
@@ -63,22 +72,20 @@ header nav li a{
 
 /*MAIN*/
 main{
-	padding-left: 75px;
-	padding-right: 75px;
+	width: 85%;
+	margin: auto;
+	overflow: auto;
 	text-align: center;
 }
 
-main .reserve{
+.reserve{
 	border-radius: 6px;
 	text-decoration: none;
 	padding: 5px 15px;
+	display: inline-block;
 }
 
-main h3{
-	margin-bottom: 40px;
-}
-
-main h2{
+h2{
 	margin-top:75px;
 	margin-bottom: 45px;
 }
@@ -87,43 +94,49 @@ section{
 	overflow: auto;
 }
 
-section .plates{
+.col-third{
 	box-sizing: border-box;
 	border-radius: 5px;
 	width:33.33%;
-	padding-top: 25px;
 	float: left;
 }
 
-section .plates img{
+.col-third .plate{
+	width: 85%;
+	margin: auto;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
+	background-color: #ffffff;
+	padding: 25px 0 5px 0;
+}
+
+.plate img{
 	width:100px;
 	border: 2px solid #519872;
 	border-radius: 50%;
 }
 
 /*FOOTER*/
-footer .section{
+.section{
 	overflow: auto;
+	width: 85%;
+	margin: 0 auto;
+	border-bottom: 1px solid #ffffff;
 	text-align: center;
 	padding: 20px 0;
-	border-top: 1px solid #ffffff;
 }
-
-footer .section:first-child{
+.section:first-child{
 	border-top: none;
 }
-
-footer .col-50{
+.col-50{
 	width: 50%;
 	float:left;
 	box-sizing: border-box;
 	border-right: 1px solid #ffffff;
 }
-
-footer .col-50:last-child{
+.col-50:last-child{
 	border-right: none;
 }
-
 footer img{
 	height: 40px;
 }
